--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <!-- Header Section -->
     <section class="header-bg">
-      <div class="content-align">
+      <div class="align-center">
+        <!-- Main Menu -->
         <nav class="header-menu">
           <img src="./img/discord-logo.png" alt="Logo" id="logo">
           <ul class="main-menu">
@@ -34,6 +35,25 @@
           </ul>
           <a href="#" id="login">Accedi</a>
         </nav>
+        <div class="content-align">
+          <div class="hero-text">
+            <h1>Il tuo posto per parlare</h1>
+            <div class="hero-subheading">
+              Che tu faccia parte di un club scolastico, gruppo di gamer, comunita artistica mondiale, o semplicemente
+              di
+              un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu facile chiacchierare ogni
+              giorno e ritrovarsi piu spesso.
+            </div>
+          </div>
+        </div>
+        <div class="cta-btn">
+          <a href="#" class="btn-download">
+            Scarica per Mac
+          </a>
+          <button class="btn-browser-open">
+            Apri Discord nel tuo browser
+          </button>
+        </div>
       </div>
     </section>
 
