--- a/index.html
+++ b/index.html
@@ -56,7 +56,51 @@
         </div>
       </div>
     </section>
-
+    <section>
+      <div class="align-center">
+        <div class="content-row">
+          <img src="img/no-image@2x.png">
+          <div class="content-text-container">
+            <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
+            </div>
+            <div class="content-row-subheading">
+              I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+              parlare della tua giornata senza intasare una chat di gruppo.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="grey-background">
+      <div class="align-center">
+        <div class="content-row">
+          <img id="img-right" src="img/no-image@2x.png">
+          <div class="content-text-container">
+            <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
+            </div>
+            <div class="content-row-subheading">
+              I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+              parlare della tua giornata senza intasare una chat di gruppo.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="align-center">
+        <div class="content-row">
+          <img src="img/no-image@2x.png">
+          <div class="content-text-container">
+            <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
+            </div>
+            <div class="content-row-subheading">
+              I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+              parlare della tua giornata senza intasare una chat di gruppo.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 
 </html>
