Section before footer

--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="align-center">
+        <div class="bottom-flex">
+          <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
+          </div>
+          <div class="content-row-subheading">
+            I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+            parlare della tua giornata senza intasare una chat di gruppo.
+          </div>
+          <img src="img/no-image@2x.png">
+        </div>
+        <div class="text-above-cta">
+          <h3>Pronto a iniziare la tua avventura?</h3>
+          <a href="#">Scarica per Mac</a>
+        </div>
+      </div>
+    </section>
   </body>
 
 </html>
