--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>Layout</title>
   </head>
 
@@ -117,6 +118,75 @@
           <a href="#">Scarica per Mac</a>
         </div>
       </div>
+    </section>
+    <section>
+      <footer>
+        <div class="align-center">
+          <div class="footer-row">
+            <div class="footer-col">
+              <h3>Il tuo posto per parlare</h3>
+              <img src="./img/italy.svg" alt="bandiera italia"><span> Italiano <i
+                  class="fa-solid fa-angle-down"></i></span>
+              <div class="social-links">
+                <a href="#"><i class="fa-brands  fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands  fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              </div>
+            </div>
+            <div class="footer-col">
+              <h4>Titolo Menu</h4>
+              <ul>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Titolo Menu</h4>
+              <ul>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Titolo Menu</h4>
+              <ul>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Titolo Menu</h4>
+              <ul>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">VoceMenu</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="spacing"></div>
+          <div class="footer-bottom">
+            <img src="./img/discord-logo.png" alt="Logo" id="logo-footer">
+            <a id="register" href="#">Registrati</a>
+          </div>
+        </div>
+      </footer>
     </section>
   </body>
 
