--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           </ul>
           <a href="#" id="login">Accedi</a>
         </nav>
+        <!-- Hero text -->
         <div class="content-align">
           <div class="hero-text">
             <h1>Il tuo posto per parlare</h1>
@@ -47,6 +48,7 @@
             </div>
           </div>
         </div>
+        <!-- Hero buttons -->
         <div class="cta-btn">
           <a href="#" class="btn-download">
             Scarica per Mac
@@ -57,6 +59,7 @@
         </div>
       </div>
     </section>
+    <!-- First section with img left -->
     <section>
       <div class="align-center">
         <div class="content-row">
@@ -72,6 +75,7 @@
         </div>
       </div>
     </section>
+    <!-- Second section with img right -->
     <section class="grey-background">
       <div class="align-center">
         <div class="content-row">
@@ -87,6 +91,7 @@
         </div>
       </div>
     </section>
+    <!-- Third section with img left -->
     <section>
       <div class="align-center">
         <div class="content-row">
@@ -102,6 +107,7 @@
         </div>
       </div>
     </section>
+    <!-- Fourth section with img under text -->
     <section>
       <div class="align-center">
         <div class="bottom-flex">
@@ -113,6 +119,7 @@
           </div>
           <img src="img/no-image@2x.png">
         </div>
+        <!-- Fourth section call to action -->
         <div class="text-above-cta">
           <h3>Pronto a iniziare la tua avventura?</h3>
           <a href="#">Scarica per Mac</a>
@@ -120,6 +127,7 @@
       </div>
     </section>
     <section>
+      <!-- Footer -->
       <footer>
         <div class="align-center">
           <div class="footer-row">
@@ -180,7 +188,9 @@
               </ul>
             </div>
           </div>
+          <!-- Horizontal Line -->
           <div class="spacing"></div>
+          <!-- Bottom of footer -->
           <div class="footer-bottom">
             <img src="./img/discord-logo.png" alt="Logo" id="logo-footer">
             <a id="register" href="#">Registrati</a>
